addressing layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -76,6 +76,9 @@ input[type="checkbox"] {
 
 .joke-content {
   font-family: "Nunito", sans-serif;
+  text-align: center;
+  font-size: 48px;
+  color: #ec6709;
 }
 
 .reload-content {
@@ -225,6 +228,12 @@ li {
   }
 }
 
+/* QUERY FORM */
+.container-fluid {
+  margin: auto;
+  width: 60%;
+}
+
 /* RATING IMPLEMENTATION */
 
 .rating-container {
@@ -335,6 +344,8 @@ input[type="submit"]:hover {
   background-color: #f2f2f2;
   padding: 5px;
   font-family: "Nunito Sans", sans-serif;
+  width: 75%;
+  margin: auto;
   /* 
   display: flex;
   align-items: center;
@@ -345,4 +356,13 @@ input[type="submit"]:hover {
 } */
 .text-center {
   background-color: rgba(0, 0, 0, 0.2);
+}
+
+.personalised-container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 5px;
+  font-family: "Nunito Sans", sans-serif;
+  width: 100%;
+  margin-top: 200px;
 }
